Fix import example typo

--- a/packages/components/src/FormatTime/FormatTime.mdx
+++ b/packages/components/src/FormatTime/FormatTime.mdx
@@ -19,7 +19,7 @@ format. No text styling is applied, this simply formats the text.
 ## Simple Example
 
 ```ts
-import { Tabs, Tab } from "@jobber/components/FormatTime";
+import { FormatTime } from "@jobber/components/FormatTime";
 ```
 
 <Playground>
