--- a/packages/components/src/InputNumber/InputNumber.mdx
+++ b/packages/components/src/InputNumber/InputNumber.mdx
@@ -16,8 +16,6 @@ import { useState } from "react";
 
 Input number is used in forms that accept numbers as an answer.
 
-## Simple Example
-
 <Playground>
   {() => {
     const [value, setValue] = useState(30);
@@ -112,7 +110,10 @@ Input number is used in forms that accept numbers as an answer.
   </Text>
 </Playground>
 
-## Rendering the error message outside of the field
+## Using onValidate
+
+If you need to capture the error message and render it outside of the component.
+You can use `onValidate` to catch them.
 
 <Playground>
   {() => {
