add disabled switch

--- a/packages/components/src/Switch/Switch.mdx
+++ b/packages/components/src/Switch/Switch.mdx
@@ -39,6 +39,12 @@ A switch toggles the state of a single setting to on or off.
   }}
 </Playground>
 
+## Disabled
+
+<Playground>
+  <Switch value={true} ariaLabel="Visible to clients" disabled={true} />
+</Playground>
+
 ## Switch Properties
 
 <Props of={Switch} />
