mark tabs as responsive

--- a/packages/components/src/Tabs/Tabs.mdx
+++ b/packages/components/src/Tabs/Tabs.mdx
@@ -10,7 +10,7 @@ import { Tabs, Tab } from ".";
 
 # Tabs
 
-<ComponentStatus stage="ready" responsive="no" accessible="yes" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 In Jobber a tabs are used to alternate amongst related views within the same
 context.
