--- a/packages/components/src/Menu/Menu.mdx
+++ b/packages/components/src/Menu/Menu.mdx
@@ -14,7 +14,9 @@ import { Menu } from ".";
 
 <ComponentStatus stage="pre" responsive="no" accessible="yes" />
 
-A toggleable menu that holds a list of actions.
+A toggleable menu that holds a list of actions. Where `InputSelect` is used to
+select an item from a list `Menu` is used to display a dismissible menu of
+actions the user can preform.
 
 ## Simple Example
 
