Drop me down and pop me over these actions (#78)
* first pass on menu component

* add id and arias on button

* adjust menu to be semi accesible

* show hide menu

* add overlay

* change accessible to yes and expanded to convery correctly

* code cleanup

* add basic test

* add uuid generator

* add unique ID and better elevation

* better uuid tes

* documentation and test update

* missed section props import

* Menu activator

* Better description

* Predictably but don't always return the same uuid.

* Moar tests.

* Hide on select item.

* Position intelligently

* scroll long menus

--- a/packages/design/src/Elevations.mdx
+++ b/packages/design/src/Elevations.mdx
@@ -18,3 +18,4 @@ export function Value({ of: type }) {
 | :--------------- | :------------------- |
 | Form field label | <Value of="base" />  |
 | Modal            | <Value of="modal" /> |
+| Menu             | <Value of="menu" />  |
