better typography styling and inheritance

--- a/packages/components/src/Emphasis/Emphasis.mdx
+++ b/packages/components/src/Emphasis/Emphasis.mdx
@@ -41,7 +41,7 @@ Used to call attention to a specific value prop on a heading. Highlight should
 only be used on page titles and subtitle.
 
 <Playground>
-  <Heading variation="page">
+  <Heading level={1}>
     Get paid <Emphasis variation="highlight">faster</Emphasis>
   </Heading>
 </Playground>
