--- a/packages/components/src/Heading/Heading.mdx
+++ b/packages/components/src/Heading/Heading.mdx
@@ -19,7 +19,7 @@ This should explain the main subject of the page. There should only be one on a
 page.
 
 <Playground>
-  <Heading level="1">New client</Heading>
+  <Heading level={1}>New client</Heading>
 </Playground>
 
 ## Heading 2
@@ -30,9 +30,9 @@ categories when creating a new client. Client details and property details.
 This heading can be skipped if there's no large groups that need breaking up.
 
 <Playground>
-  <Heading level="2">Client details</Heading>
+  <Heading level={2}>Client details</Heading>
   ...
-  <Heading level="2">Property details</Heading>
+  <Heading level={2}>Property details</Heading>
   ...
 </Playground>
 
@@ -41,11 +41,11 @@ This heading can be skipped if there's no large groups that need breaking up.
 Used to group content and forms on a single topic
 
 <Playground>
-  <Heading level="3">Contact details</Heading>
+  <Heading level={3}>Contact details</Heading>
   ...
-  <Heading level="3">Notifications</Heading>
+  <Heading level={3}>Notifications</Heading>
   ...
-  <Heading level="3">Additional details</Heading>
+  <Heading level={3}>Additional details</Heading>
   ...
 </Playground>
 
@@ -55,11 +55,11 @@ Used to group contents after a [heading 3](#heading-3) or inside a card
 component
 
 <Playground>
-  <Heading level="4">Phone numbers</Heading>
+  <Heading level={4}>Phone numbers</Heading>
   ...
-  <Heading level="4">Email</Heading>
+  <Heading level={4}>Email</Heading>
   ...
-  <Heading level="4">Pigeon</Heading>
+  <Heading level={4}>Pigeon</Heading>
   ...
 </Playground>
 
@@ -68,7 +68,7 @@ component
 Used to group contents after a [heading 4](#heading-4)
 
 <Playground>
-  <Heading level="5">Recieves SMS</Heading>
+  <Heading level={5}>Recieves SMS</Heading>
 </Playground>
 
 ## Heading Properties
