better example message

--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -77,7 +77,7 @@ shouldn't replace of your server-side validation.
           },
           {
             shouldShow: value.length > 0 && !isNaN(value),
-            message: "Only type your age in words",
+            message: "Type your age in words",
             status: "error"
           }
         ]}
