--- a/packages/components/src/InputValidation/InputValidation.mdx
+++ b/packages/components/src/InputValidation/InputValidation.mdx
@@ -8,7 +8,7 @@ import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { InputValidation } from ".";
 import { Text } from "../Text";
-import { InputNumber } from "../InputNumber";
+import { InputText } from "../InputText";
 import { useState } from "react";
 
 # Input Validation
@@ -19,36 +19,33 @@ This component allows you to show the validation messages outside of the inputs.
 
 <Playground>
   {() => {
-    const [value, setValue] = useState(5);
+    const [value, setValue] = useState("Juan");
     const [validationMessage, setValidationMessage] = useState(undefined);
     return (
       <>
         <InputValidation messages={validationMessage} />
         <Text>
-          Follow-up after
-          <InputNumber
-            name="durationInDays"
+          My name is
+          <InputText
+            validations={[
+              {
+                shouldShow: value !== "Jeff",
+                message: "Your name is supposed to be Jeff",
+                status: "error",
+              },
+            ]}
+            onValidation={setValidationMessage}
+            name="myName"
             value={value}
             size="small"
             inline={true}
-            max={4}
-            min={0}
-            onChange={handleChange}
-            onValidation={handleValidation}
+            onChange={setValue}
             align="center"
+            maxLength={4}
           />
-          days
         </Text>
       </>
     );
-
-    function handleChange(newValue) {
-      setValue(newValue);
-    };
-
-    function handleValidation(messages) {
-      setValidationMessage(messages);
-    };
 
 }}
 
