link to input validation for onValidation example

--- a/packages/components/src/InputNumber/InputNumber.mdx
+++ b/packages/components/src/InputNumber/InputNumber.mdx
@@ -110,6 +110,11 @@ Input number is used in forms that accept numbers as an answer.
   </Text>
 </Playground>
 
+## Using onValidation
+
+If you need to capture the error message and render it outside of the component.
+Read the [InputValidation](/components/input-validation) documentation.
+
 ## Properties
 
 <Props of={InputNumber} />
