--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -174,6 +174,11 @@ shouldn't replace of your server-side validation.
 
 </Playground>
 
+## Using onValidation
+
+If you need to capture the error message and render it outside of the component.
+Read the [InputValidation](/components/input-validation) documentation.
+
 ## InputText Properties
 
 <Props of={InputText} />
