--- a/packages/components/src/InputTime/InputTime.mdx
+++ b/packages/components/src/InputTime/InputTime.mdx
@@ -8,6 +8,7 @@ import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { InputTime } from ".";
 import { Button } from "../Button";
+import { Content } from "../Content";
 import { useState } from "react";
 import { CivilTime } from "@std-proposal/temporal";
 
@@ -28,21 +29,21 @@ import { InputTime } "@jobber/components/InputTime";
 ```
 
 <Playground>
-
-  <InputTime defaultValue={new CivilTime(2,35)} size="small" />
-  <InputTime defaultValue={new CivilTime(2,35)} />
-  <InputTime defaultValue={new CivilTime(2,35)} size="large" />
-
+  <Content>
+    <InputTime defaultValue={new CivilTime(2, 35)} size="small" />
+    <InputTime defaultValue={new CivilTime(2, 35)} />
+    <InputTime defaultValue={new CivilTime(2, 35)} size="large" />
+  </Content>
 </Playground>
 
 ## States
 
 <Playground>
-
-  <InputTime defaultValue={new CivilTime(3, 52)} disabled={true} />
-  <InputTime defaultValue={new CivilTime(5, 23)} readonly={true} />
-  <InputTime defaultValue={new CivilTime(2, 35)} invalid={true} />
-
+  <Content>
+    <InputTime defaultValue={new CivilTime(3, 52)} disabled={true} />
+    <InputTime defaultValue={new CivilTime(5, 23)} readonly={true} />
+    <InputTime defaultValue={new CivilTime(2, 35)} invalid={true} />
+  </Content>
 </Playground>
 
 ## Events
@@ -61,11 +62,11 @@ the last element is set the change event will fire.
       setTime(newTime);
     };
     return (
-      <>
+      <Content>
         <InputTime value={time} onChange={handleChange} />
         <pre>{time && time.toString()}</pre>
         <Button label="Reset" onClick={resetTime} />
-      </>
+      </Content>
     );
   }}
 </Playground>
