--- a/packages/components/src/Select/Select.mdx
+++ b/packages/components/src/Select/Select.mdx
@@ -7,6 +7,7 @@ route: /components/select
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { Select, Option } from ".";
+import { Content } from "../Content";
 
 # Select
 
@@ -27,12 +28,13 @@ to choose from.
 ## Sizes
 
 <Playground>
-  <Select size="small">
-    <Option value="">Small</Option>
-    <Option value="sad" disabled>Tony</Option>
-    <Option value="old">Steve</Option>
-    <Option value="splat" label="Natasha"></Option>
-  </Select>
+  <Content>
+    <Select size="small">
+      <Option value="">Small</Option>
+      <Option value="sad" disabled>Tony</Option>
+      <Option value="old">Steve</Option>
+      <Option value="splat" label="Natasha"></Option>
+    </Select>
 
 <Select>
   <Option value="">Normal</Option>
@@ -41,25 +43,30 @@ to choose from.
   <Option value="yoink">Vision</Option>
 </Select>
 
-  <Select size="large">
-    <Option value="">Large</Option>
-    <Option value="sad">Tony</Option>
-    <Option value="old">Steve</Option>
-  </Select>
+    <Select size="large">
+      <Option value="">Large</Option>
+      <Option value="sad">Tony</Option>
+      <Option value="old">Steve</Option>
+    </Select>
+
+  </Content>
 </Playground>
 
 ## States
 
 <Playground>
-  <Select size="large" invalid={true}>
-    <Option value="sad">Tony</Option>
-    <Option value="old">Steve</Option>
-  </Select>
+  <Content>
+    <Select size="large" invalid={true}>
+      <Option value="sad">Tony</Option>
+      <Option value="old">Steve</Option>
+    </Select>
 
-  <Select size="large" disabled={true}>
-    <Option value="sad">Tony</Option>
-    <Option value="old">Steve</Option>
-  </Select>
+    <Select size="large" disabled={true}>
+      <Option value="sad">Tony</Option>
+      <Option value="old">Steve</Option>
+    </Select>
+
+  </Content>
 </Playground>
 
 ## Initial Value
