--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -9,6 +9,7 @@ import { ComponentStatus } from "@jobber/docx";
 import { InputText } from ".";
 import { useState } from "react";
 import { Button } from "../Button";
+import { Content } from "../Content";
 import { Text } from "../Text";
 
 # Input Text
@@ -124,11 +125,11 @@ Use this to allow users to provide long answers.
     }
 
     return (
-      <>
+      <Content>
         <InputText value={text} onChange={handleTextChange} ref={textRef} />
         <pre>{text}</pre>
         <Button label="Insert Emoji" onClick={insert} />
-      </>
+      </Content>
     );
 
 }}
