make sean happy

--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -53,7 +53,7 @@ Use this to allow users to provide long answers.
 ## Validation message
 
 You can add your own custom validation messages on a field. However, this
-shouldn't replace of your server-side validation.
+shouldn't replace server-side validation.
 
 <Playground>
   {() => {
