feat: Support generic validation messages on inputs. (#110)
* initial validation message prop

* add yellow dark text color

* better prop and type name

* update documentation

* tone down the animation

* better example message

* pluralize validations and highlight field red

* add better documentation

* pluralize validation props

* also highlight if shouldShow is not defined

* update number validation to use the new validations

* Revert "update number validation to use the new validations"

This reverts commit 9c47fe2916984c13e0c56ecd17d56418d5cd090c.

* extract input validation on its own component

* adjust input validation sample

* remove onValidate example for now

* adjust inline prop description and use `some`

* link to input validation for onValidation example

* pluralize input validation example state

* get rid of mapping

* make sean happy

--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -50,6 +50,45 @@ Use this to allow users to provide long answers.
   />
 </Playground>
 
+## Validation message
+
+You can add your own custom validation messages on a field. However, this
+shouldn't replace server-side validation.
+
+<Playground>
+  {() => {
+    const [value, setValue] = useState("");
+    return (
+      <InputText
+        value={value}
+        onChange={handleChange}
+        name="age"
+        placeholder="What's your age"
+        validations={[
+          {
+            shouldShow: value.length > 2 && value.length < 10 && isNaN(value),
+            message: "Now that's a word, keep going!",
+            status: "success"
+          },
+          {
+            shouldShow: value.length >= 10,
+            message: "You sure you're that old?",
+            status: "warn"
+          },
+          {
+            shouldShow: value.length > 0 && !isNaN(value),
+            message: "Type your age in words",
+            status: "error"
+          }
+        ]}
+      />
+    );
+    function handleChange(newValue) {
+      setValue(newValue);
+    }
+  }}
+</Playground>
+
 ## States
 
 ### Disabled
@@ -134,6 +173,11 @@ Use this to allow users to provide long answers.
 }}
 
 </Playground>
+
+## Using onValidation
+
+If you need to capture the error message and render it outside of the component.
+Read the [InputValidation](/components/input-validation) documentation.
 
 ## InputText Properties
 
