Have you considered a better input validation, like this one?

--- a/packages/components/src/InputValidation/InputValidation.mdx
+++ b/packages/components/src/InputValidation/InputValidation.mdx
@@ -30,7 +30,7 @@ This component allows you to show the validation messages outside of the inputs.
             validations={[
               {
                 shouldShow: value !== "Jeff",
-                message: "Your name is supposed to be Jeff",
+                message: "Have you considered a better name, like Jeff?",
                 status: "error",
               },
             ]}
