add base padding by default on content

--- a/packages/components/src/Card/Card.mdx
+++ b/packages/components/src/Card/Card.mdx
@@ -19,10 +19,18 @@ scan, and action upon
 
 <Playground>
   <Card title="Banana">
-    <Content padding="base">
+    <Content>
+      <Heading level={4}>Burro</Heading>
       <Text>
-        A banana is an edible fruit – botanically a berry – produced by several
-        kinds of large herbaceous flowering plants in the genus Musa.
+        Squatty and slightly square at the edges, these bananas are slightly
+        tangy and lemony. When ripe, the fruit is soft and the skin is yellow
+        with black spots. Also called Horse, Hog, or Orinoco bananas.
+      </Text>
+      <Heading level={4}>Cavendish</Heading>
+      <Text>
+        This is the familiar yellow banana sold in United States’ supermarkets.
+        There are also other sizes of Cavendish, including Dwarf and Giant,
+        though they are difficult to find.
       </Text>
     </Content>
   </Card>
@@ -34,7 +42,7 @@ scan, and action upon
 
 <Playground>
   <Card url="#">
-    <Content padding="base">
+    <Content>
       <Heading level={4}>View All</Heading>
       <Text>
         See how our 20+ features can help you organize, impress, and grow.
@@ -52,7 +60,7 @@ scan, and action upon
       console.log(e.currentTarget);
     }}
   >
-    <Content padding="base">
+    <Content>
       <Heading level={4}>View All</Heading>
       <Text>
         See how our 20+ features can help you organize, impress, and grow.
