--- a/packages/components/src/Content/Content.mdx
+++ b/packages/components/src/Content/Content.mdx
@@ -51,7 +51,7 @@ Contents are used to give elements consistent vertical spacing and padding.
 <Playground>
   <Card>
     <Title title="About me" />
-    <Content padding="base">
+    <Content>
       <Heading level={4}>My favourite food</Heading>
       <Text>
         Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue. Nullam quis risus eget urna mollis ornare vel eu leo. Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.
