--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -125,7 +125,7 @@ Use this to allow users to provide long answers.
     }
 
     return (
-      <Content>
+      <Content padding="none">
         <InputText value={text} onChange={handleTextChange} ref={textRef} />
         <pre>{text}</pre>
         <Button label="Insert Emoji" onClick={insert} />
