--- a/packages/components/src/Select/Select.mdx
+++ b/packages/components/src/Select/Select.mdx
@@ -28,7 +28,7 @@ to choose from.
 ## Sizes
 
 <Playground>
-  <Content>
+  <Content padding="none">
     <Select size="small">
       <Option value="">Small</Option>
       <Option value="sad" disabled>Tony</Option>
@@ -55,7 +55,7 @@ to choose from.
 ## States
 
 <Playground>
-  <Content>
+  <Content padding="none">
     <Select size="large" invalid={true}>
       <Option value="sad">Tony</Option>
       <Option value="old">Steve</Option>
