add base padding by default on content

--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -164,7 +164,7 @@ shouldn't replace server-side validation.
     }
 
     return (
-      <Content>
+      <Content padding="none">
         <InputText value={text} onChange={handleTextChange} ref={textRef} />
         <pre>{text}</pre>
         <Button label="Insert Emoji" onClick={insert} />
