adjust input text documentation

--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -25,13 +25,10 @@ Use this to allow users to provide short answers.
 <Playground>
   {() => {
     const [value, setValue] = useState("Veintisiete");
-    const handleChange = newValue => {
-      setValue(newValue);
-    };
     return (
       <InputText
         value={value}
-        onChange={handleChange}
+        onChange={setValue}
         name="age"
         placeholder="Age in words"
       />
@@ -127,8 +124,15 @@ shouldn't replace server-side validation.
 
 ## Sizes
 
+### Small
+
 <Playground>
   <InputText name="smallField" size="small" placeholder="Duration" />
+</Playground>
+
+### Large
+
+<Playground>
   <InputText name="largeField" size="large" placeholder="Your username" />
 </Playground>
 
