first pass on required validation

--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -33,6 +33,7 @@ Use this to allow users to provide short answers.
         onChange={handleChange}
         name="age"
         placeholder="Age in words"
+        required={true}
       />
     );
   }}
