remove unecessary code

--- a/packages/components/src/Modal/Modal.mdx
+++ b/packages/components/src/Modal/Modal.mdx
@@ -31,7 +31,7 @@ the rest of the application until a specific action is taken.
           open={value}
           onRequestClose={() => setValue(!value)}
         >
-          <Content type="modal">
+          <Content>
             <Text>
               Display your online booking request form on your website or social media
             </Text>
