--- a/packages/components/src/Card/Card.mdx
+++ b/packages/components/src/Card/Card.mdx
@@ -19,7 +19,7 @@ scan, and action upon
 
 <Playground>
   <Card title="Banana">
-    <Content>
+    <Content padded={true}>
       <Heading level={4}>Burro</Heading>
       <Text>
         Squatty and slightly square at the edges, these bananas are slightly
@@ -42,7 +42,7 @@ scan, and action upon
 
 <Playground>
   <Card url="#">
-    <Content>
+    <Content padded={true}>
       <Heading level={4}>View All</Heading>
       <Text>
         See how our 20+ features can help you organize, impress, and grow.
@@ -60,7 +60,7 @@ scan, and action upon
       console.log(e.currentTarget);
     }}
   >
-    <Content>
+    <Content padded={true}>
       <Heading level={4}>View All</Heading>
       <Text>
         See how our 20+ features can help you organize, impress, and grow.
