add descriptions for markdown props

--- a/packages/components/src/Markdown/Markdown.mdx
+++ b/packages/components/src/Markdown/Markdown.mdx
@@ -10,10 +10,11 @@ import { Markdown } from ".";
 
 # Markdown
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
+<ComponentStatus stage="rc" responsive="yes" accessible="yes" />
 
 Markdown component is a text-to-HTML conversion tool with a twist! Because,
-instead of using semantic HTML tags, it uses our own atlantis component.
+instead of using semantic HTML tags, it uses our own atlantis component for
+paragraph, bold, italic, and heading.
 
 <Playground>
   <Markdown content={`# Bananas
