--- a/packages/components/src/Markdown/Markdown.mdx
+++ b/packages/components/src/Markdown/Markdown.mdx
@@ -17,13 +17,9 @@ instead of using semantic HTML tags, it uses our own atlantis component for
 paragraph, bold, italic, and heading.
 
 <Playground>
-  <Markdown content={`# Bananas
+  <Markdown content={`### Bananas
 
-    Bananas are **yellow** on the outside and **white** on the inside. It's also full of nutrients, _but thats just boring stuff_.
-
-    ## Types of bananas
-
-    At this point, I'll just ask you to [google it](https://lmgtfy.com/?q=types+of+bananas)`} />
+    Bananas are **yellow** on the outside and **white** on the inside. It's also full of nutrients, _but thats just boring stuff_. At this point, I'll just ask you to [google it](https://lmgtfy.com/?q=types+of+bananas).`} />
 
 </Playground>
 
