tighten the boundaries

--- a/packages/components/src/Tooltip/Tooltip.mdx
+++ b/packages/components/src/Tooltip/Tooltip.mdx
@@ -18,7 +18,7 @@ Tooltips are extra information that briefly explain the function of a UI
 element.
 
 <Playground>
-  <Tooltip message="You have been blessed by the great work button">
+  <Tooltip message="'tis a button">
     <Button label="Hover On Me" />
   </Tooltip>
 </Playground>
