add z-index to elevation list

--- a/packages/design/src/Elevations.mdx
+++ b/packages/design/src/Elevations.mdx
@@ -14,8 +14,9 @@ export function Value({ of: type }) {
   return <>{getValue}</>;
 }
 
-| Component        | Value                |
-| :--------------- | :------------------- |
-| Form field label | <Value of="base" />  |
-| Modal            | <Value of="modal" /> |
-| Menu             | <Value of="menu" />  |
+| Component        | Value                  |
+| :--------------- | :--------------------- |
+| Form field label | <Value of="base" />    |
+| Menu             | <Value of="menu" />    |
+| Modal            | <Value of="modal" />   |
+| Tooltip          | <Value of="tooltip" /> |
