change to accessible:yes

--- a/packages/components/src/Page/Page.mdx
+++ b/packages/components/src/Page/Page.mdx
@@ -11,7 +11,7 @@ import { Text } from "../Text";
 
 # Page
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
+<ComponentStatus stage="pre" responsive="no" accessible="yes" />
 
 Use to build the title and descriptions part of the page.
 
