adjust component statis

--- a/packages/components/src/FeatureSwitch/FeatureSwitch.mdx
+++ b/packages/components/src/FeatureSwitch/FeatureSwitch.mdx
@@ -11,7 +11,7 @@ import { Text } from "../Text";
 
 # Feature Switch
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
+<ComponentStatus stage="rc" responsive="yes" accessible="yes" />
 
 Allow users to switch a feature on or off.
 
