--- a/packages/components/src/FeatureSwitch/FeatureSwitch.mdx
+++ b/packages/components/src/FeatureSwitch/FeatureSwitch.mdx
@@ -8,6 +8,7 @@ import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { FeatureSwitch } from ".";
 import { Text } from "../Text";
+import { useState } from "react";
 
 # Feature Switch
 
@@ -16,19 +17,30 @@ import { Text } from "../Text";
 Allow users to switch a feature on or off.
 
 <Playground>
-  <FeatureSwitch
-    title="Quote follow-up"
-    description="Send a notification to your client following up on an outstanding quote."
-    hasSaveIndicator={true}
-    onSwitch={newValue => {
-      console.log(`Feature ${newValue ? "enabled" : "disabled"}`);
-    }}
-    onEdit={() => {
-      console.log("You clicked edit");
-    }}
-  >
-    <Text>Feature Content</Text>
-  </FeatureSwitch>
+  {() => {
+    const [featureEnabled, setFeatureEnabled] = useState(true);
+
+    return (
+      <FeatureSwitch
+        enabled={featureEnabled}
+        title="Quote follow-up"
+        description="Send a notification to your client following up on an outstanding quote."
+        hasSaveIndicator={true}
+        onSwitch={handleSwitch}
+        onEdit={() => {
+          console.log("You clicked edit");
+        }}
+      >
+        <Text>Extra feature content and information</Text>
+      </FeatureSwitch>
+    );
+
+    function handleSwitch(newValue) {
+      setFeatureEnabled(newValue);
+    }
+
+}}
+
 </Playground>
 
 ## Simple usage
