--- a/packages/components/src/InputTime/InputTime.mdx
+++ b/packages/components/src/InputTime/InputTime.mdx
@@ -66,7 +66,7 @@ the last element is set the change event will fire.
       setTime(newTime);
     };
     return (
-      <Content padding="none">
+      <Content>
         <InputTime value={time} onChange={handleChange} />
         <pre>{time && time.toString()}</pre>
         <Button label="Reset" onClick={resetTime} />
