--- a/packages/components/src/Select/Select.mdx
+++ b/packages/components/src/Select/Select.mdx
@@ -7,7 +7,6 @@ route: /components/select
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { Select, Option } from ".";
-import { Content } from "../Content";
 
 # Select
 
@@ -27,46 +26,50 @@ to choose from.
 
 ## Sizes
 
+### Small
+
 <Playground>
-  <Content>
-    <Select size="small">
-      <Option value="">Small</Option>
-      <Option value="sad" disabled>Tony</Option>
-      <Option value="old">Steve</Option>
-      <Option value="splat" label="Natasha"></Option>
-    </Select>
+  <Select size="small">
+    <Option value="">Small</Option>
+    <Option value="sad" disabled>
+      Tony
+    </Option>
+    <Option value="old">Steve</Option>
+    <Option value="splat" label="Natasha"></Option>
+  </Select>
+</Playground>
 
-<Select>
-  <Option value="">Normal</Option>
-  <Option value="sad">Tony</Option>
-  <Option value="old">Steve</Option>
-  <Option value="yoink">Vision</Option>
-</Select>
+### Large
 
-    <Select size="large">
-      <Option value="">Large</Option>
-      <Option value="sad">Tony</Option>
-      <Option value="old">Steve</Option>
-    </Select>
-
-  </Content>
+<Playground>
+  <Select size="large">
+    <Option value="">Small</Option>
+    <Option value="sad" disabled>
+      Tony
+    </Option>
+    <Option value="old">Steve</Option>
+    <Option value="splat" label="Natasha"></Option>
+  </Select>
 </Playground>
 
 ## States
 
+### Invalid
+
 <Playground>
-  <Content>
-    <Select size="large" invalid={true}>
-      <Option value="sad">Tony</Option>
-      <Option value="old">Steve</Option>
-    </Select>
+  <Select size="large" invalid={true}>
+    <Option value="sad">Tony</Option>
+    <Option value="old">Steve</Option>
+  </Select>
+</Playground>
 
-    <Select size="large" disabled={true}>
-      <Option value="sad">Tony</Option>
-      <Option value="old">Steve</Option>
-    </Select>
+### Disabled
 
-  </Content>
+<Playground>
+  <Select size="large" disabled={true}>
+    <Option value="sad">Tony</Option>
+    <Option value="old">Steve</Option>
+  </Select>
 </Playground>
 
 ## Initial Value
