remove the title from examples

--- a/packages/components/src/Card/Card.mdx
+++ b/packages/components/src/Card/Card.mdx
@@ -5,7 +5,7 @@ route: /components/card
 
 import { Playground, Props, Link } from "docz";
 import { ComponentStatus } from "@jobber/docx";
-import { Card, Title } from ".";
+import { Card } from ".";
 import { Text } from "../Text";
 import { Heading } from "../Heading";
 import { Content } from "../Content";
