--- a/packages/components/src/Content/Content.mdx
+++ b/packages/components/src/Content/Content.mdx
@@ -12,7 +12,7 @@ import { Heading } from "../Heading";
 import { InputText } from "../InputText";
 import { Button } from "../Button";
 import { Tabs, Tab } from "../Tabs";
-import { Card, Title } from "../Card";
+import { Card } from "../Card";
 
 # Content
 
@@ -49,8 +49,7 @@ Contents are used to give elements consistent vertical spacing and padding.
 ## Within Cards
 
 <Playground>
-  <Card>
-    <Title title="About me" />
+  <Card title="About me">
     <Content>
       <Heading level={4}>My favourite food</Heading>
       <Text>
