get rid of error message entirely in favour of validations

--- a/packages/components/src/InputNumber/InputNumber.mdx
+++ b/packages/components/src/InputNumber/InputNumber.mdx
@@ -110,7 +110,7 @@ Input number is used in forms that accept numbers as an answer.
   </Text>
 </Playground>
 
-## Using onValidation
+## Using onValidate
 
 If you need to capture the error message and render it outside of the component.
 Read the [InputValidation](/components/input-validation) documentation.
