--- a/packages/components/src/InputValidation/InputValidation.mdx
+++ b/packages/components/src/InputValidation/InputValidation.mdx
@@ -34,7 +34,7 @@ This component allows you to show the validation messages outside of the inputs.
                 status: "error",
               },
             ]}
-            onValidation={setValidationMessages}
+            onValidate={setValidationMessages}
             name="myName"
             value={value}
             size="small"
