adjust description list to be aware of the content

--- a/packages/components/src/DescriptionList/DescriptionList.mdx
+++ b/packages/components/src/DescriptionList/DescriptionList.mdx
@@ -10,7 +10,7 @@ import { DescriptionList } from ".";
 
 # Description List
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Description Lists are used to display a list of terms and descriptions.
 
