mark things ready and potentially responsive/acccesible

--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -10,7 +10,7 @@ import { Banner } from ".";
 
 # Banner
 
-<ComponentStatus stage="rc" responsive="yes" accessible="yes" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Banners provide feedback and information about user actions and app operations.
 They're positioned at the top of the screen or near the content they reference.
