--- a/packages/components/src/Card/Card.mdx
+++ b/packages/components/src/Card/Card.mdx
@@ -9,7 +9,7 @@ import { Card, Title } from ".";
 
 # Card
 
-<ComponentStatus stage="rc" responsive="yes" accessible="yes" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 In Jobber a card is used to group related information and tasks to make things
 easier to scan, and action upon. Cards also contain many optional sub-components
