--- a/packages/components/src/Emphasis/Emphasis.mdx
+++ b/packages/components/src/Emphasis/Emphasis.mdx
@@ -10,7 +10,7 @@ import { Text } from "../Text";
 
 # Emphasis
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Use this component to emphasize a certain content of a Heading or Text component
 
