--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -9,7 +9,7 @@ import { Icon } from "./";
 
 # Icon
 
-<ComponentStatus stage="pre" responsive="yes" accessible="no" />
+<ComponentStatus stage="ready" responsive="yes" accessible="no" />
 
 Atlantis provides built-in icons that represent common tasks and types of
 content in a variety of use cases.
