--- a/packages/components/src/InputTime/InputTime.mdx
+++ b/packages/components/src/InputTime/InputTime.mdx
@@ -13,7 +13,7 @@ import { CivilTime } from "@std-proposal/temporal";
 
 # InputTime
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Select a time of day. For example the time a messages should be sent or when a
 job started/ended.
