--- a/packages/components/src/Switch/Switch.mdx
+++ b/packages/components/src/Switch/Switch.mdx
@@ -11,7 +11,7 @@ import { Switch } from ".";
 
 # Switch
 
-<ComponentStatus stage="pre" responsive="yes" accessible="yes" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 A switch toggles the state of a single setting to on or off.
 
