--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -10,7 +10,7 @@ import { Button } from ".";
 
 # Button
 
-<ComponentStatus stage="rc" responsive="yes" accessible="yes" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Buttons are a core user interface component, as they allow users to initiate,
 complete, and reverse actions.
