--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -13,7 +13,7 @@ import { Text } from "../Text";
 
 # Input Text
 
-<ComponentStatus stage="rc" responsive="yes" accessible="yes" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Input text is used in forms that accept short or long answers from users.
 
