--- a/packages/components/src/Markdown/Markdown.mdx
+++ b/packages/components/src/Markdown/Markdown.mdx
@@ -10,7 +10,7 @@ import { Markdown } from ".";
 
 # Markdown
 
-<ComponentStatus stage="rc" responsive="yes" accessible="yes" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Markdown component is a text-to-HTML conversion tool with a twist! Because,
 instead of using semantic HTML tags, it uses our own atlantis component for
