--- a/packages/components/src/Select/Select.mdx
+++ b/packages/components/src/Select/Select.mdx
@@ -10,7 +10,7 @@ import { Select, Option } from ".";
 
 # Select
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 In Jobber a `Select` is used to present a defined list of options for the user
 to choose from.
