--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -8,7 +8,7 @@ import { Text } from ".";
 
 # Text
 
-<ComponentStatus stage="pre" responsive="no" accessible="yes" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Text is used to add an additional visual meaning on your content
 
