update inline label component

--- a/packages/components/src/InlineLabel/InlineLabel.mdx
+++ b/packages/components/src/InlineLabel/InlineLabel.mdx
@@ -10,7 +10,7 @@ import { InlineLabel } from ".";
 
 # Inline Label
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Inline labels are typically used to indicate state/status on objects within the
 application.
@@ -18,15 +18,13 @@ application.
 ## Sizes
 
 <Playground>
-  <p>
-    <InlineLabel>Normal Label</InlineLabel>
-  </p>
-  <p>
-    <InlineLabel size="medium">Medium Label</InlineLabel>
-  </p>
-  <p>
-    <InlineLabel size="large">Large Label</InlineLabel>
-  </p>
+  <InlineLabel>Label</InlineLabel>
+  <br />
+  <br />
+  <InlineLabel size="large">Label</InlineLabel>
+  <br />
+  <br />
+  <InlineLabel size="larger">Label</InlineLabel>
 </Playground>
 
 ## Properties
