adjust status for input validation and table

--- a/packages/components/src/InputValidation/InputValidation.mdx
+++ b/packages/components/src/InputValidation/InputValidation.mdx
@@ -13,7 +13,7 @@ import { useState } from "react";
 
 # Input Validation
 
-<ComponentStatus stage="pre" responsive="yes" accessible="yes" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 This component allows you to show the validation messages outside of the inputs.
 
