update inline label examples

--- a/packages/components/src/InlineLabel/InlineLabel.mdx
+++ b/packages/components/src/InlineLabel/InlineLabel.mdx
@@ -15,16 +15,26 @@ import { InlineLabel } from ".";
 Inline labels are typically used to indicate state/status on objects within the
 application.
 
+<Playground>
+  <InlineLabel>Draft</InlineLabel>
+</Playground>
+
 ## Sizes
 
+### Large
+
 <Playground>
-  <InlineLabel>Label</InlineLabel>
-  <br />
-  <br />
-  <InlineLabel size="large">Label</InlineLabel>
-  <br />
-  <br />
-  <InlineLabel size="larger">Label</InlineLabel>
+  <InlineLabel size="large" color="blue">
+    Beta
+  </InlineLabel>
+</Playground>
+
+### Larger
+
+<Playground>
+  <InlineLabel size="larger" color="green">
+    99+
+  </InlineLabel>
 </Playground>
 
 ## Properties
