--- a/packages/components/src/InlineLabel/InlineLabel.mdx
+++ b/packages/components/src/InlineLabel/InlineLabel.mdx
@@ -10,23 +10,31 @@ import { InlineLabel } from ".";
 
 # Inline Label
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Inline labels are typically used to indicate state/status on objects within the
 application.
 
+<Playground>
+  <InlineLabel>Draft</InlineLabel>
+</Playground>
+
 ## Sizes
 
+### Large
+
 <Playground>
-  <p>
-    <InlineLabel>Normal Label</InlineLabel>
-  </p>
-  <p>
-    <InlineLabel size="medium">Medium Label</InlineLabel>
-  </p>
-  <p>
-    <InlineLabel size="large">Large Label</InlineLabel>
-  </p>
+  <InlineLabel size="large" color="blue">
+    Beta
+  </InlineLabel>
+</Playground>
+
+### Larger
+
+<Playground>
+  <InlineLabel size="larger" color="green">
+    99+
+  </InlineLabel>
 </Playground>
 
 ## Properties
