--- a/docs/guides/create-basic-component.mdx
+++ b/docs/guides/create-basic-component.mdx
@@ -38,13 +38,42 @@ In this guide, we'll show you how to build a counter component.
 
 Easy peasy, right?
 
-## Let's get started
-
-### Prerequisites
+## Prerequisites
 
 1. [Install and run Atlantis](/#development) because you need it to create a
    component in atlantis.
 2. Autogenerate a new component called `AmountCounter` by running `npm run plop`
    on a new terminal.
 
-> Protip: React components are named in `PascalCase`
+> Protip: React components are named in **`PascalCase`**
+
+Once that's done, it should tell you where the files got added.
+
+```sh
+? Component Name: AmountCounter
+✔  +! 5 files added
+ -> /packages/components/src/AmountCounter/index.ts
+ -> /packages/components/src/AmountCounter/AmountCounter.css
+ -> /packages/components/src/AmountCounter/AmountCounter.css.d.ts
+ -> /packages/components/src/AmountCounter/AmountCounter.mdx
+ -> /packages/components/src/AmountCounter/AmountCounter.test.tsx
+ -> /packages/components/src/AmountCounter/AmountCounter.tsx
+```
+
+### What are thooooose?!
+
+Right, I promised to explain them.
+
+| File name                | Description                                                                                        |
+| :----------------------- | :------------------------------------------------------------------------------------------------- |
+| `index.ts`               | This tells react what to render. Honestly, You'd probably never have to touch this.                |
+| `AmountCounter.tsx`      | This file is where you make the magic happen                                                       |
+| `AmountCounter.mdx`      | This creates the page that you see in Atlantis. This is where you explain what the magic is doing. |
+| `AmountCounter.test.tsx` | Self explanatory. No? Read the file name again but, this time, sloooower                           |
+| `AmountCounter.css`      | Self explanatory.                                                                                  |
+| `AmountCounter.css.d.ts` | This is how react knows what class names you added and automagically serializes them.              |
+
+## Let's get started
+
+Actually, no! Let's take a step back and look at the mock up again. But this
+time, it's annotated with the types that we think it should have.
