--- a/packages/components/src/Modal/Modal.mdx
+++ b/packages/components/src/Modal/Modal.mdx
@@ -31,7 +31,7 @@ the rest of the application until a specific action is taken.
           open={value}
           onRequestClose={() => setValue(!value)}
         >
-          <Content padded={true}>
+          <Content>
             <Text>
               It's harder, better, faster, and stronger! 🤖
             </Text>
@@ -70,7 +70,7 @@ You have 3 action props you can use
           tertiaryAction={{ label: "Delete", onClick: handleTertiaryAction }}
           onRequestClose={toggleModal}
         >
-          <Content padded={true}>
+          <Content>
             <Text>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe vero ratione praesentium quisquam non porro ullam maiores iure, sed odio?
             </Text>
