adjust contents padding on when nested

--- a/packages/components/src/Modal/Modal.mdx
+++ b/packages/components/src/Modal/Modal.mdx
@@ -35,6 +35,16 @@ the rest of the application until a specific action is taken.
             <Text>
               It's harder, better, faster, and stronger! 🤖
             </Text>
+          <Content>
+            <Text>
+              It's harder, better, faster, and stronger! 🤖
+            </Text>
+          <Content>
+            <Text>
+              It's harder, better, faster, and stronger! 🤖
+            </Text>
+          </Content>
+          </Content>
           </Content>
         </Modal>
 
