--- a/packages/components/src/Content/Content.mdx
+++ b/packages/components/src/Content/Content.mdx
@@ -22,21 +22,27 @@ Contents are used to give elements consistent vertical spacing and padding.
 
 <Playground>
   <Content>
-    <Heading level={2}>Sign up!</Heading>
-    <Text>
-      Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis
-      vestibulum. Nulla vitae elit libero, a pharetra augue. Nullam quis risus
-      eget urna mollis ornare vel eu leo. Vestibulum id ligula porta felis
-      euismod semper. Curabitur blandit tempus porttitor.
-    </Text>
-    <InputText placeholder="Name" />
-    <InputText placeholder="Phone" />
-    <InputText placeholder="Email" />
-    <InputText
-      multiline={true}
-      placeholder="Describe yourself"
-      name="describeAge"
-    />
+    <Card title="About me">
+      <Content>
+        <Content spacing="large">
+          <Heading level={2}>Sign up!</Heading>
+          <Text>
+            Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis
+            vestibulum. Nulla vitae elit libero, a pharetra augue. Nullam quis
+            risus eget urna mollis ornare vel eu leo. Vestibulum id ligula porta
+            felis euismod semper. Curabitur blandit tempus porttitor.
+          </Text>
+        </Content>
+        <InputText placeholder="Name" />
+        <InputText placeholder="Phone" />
+        <InputText placeholder="Email" />
+        <InputText
+          multiline={true}
+          placeholder="Describe yourself"
+          name="describeAge"
+        />
+      </Content>
+    </Card>
   </Content>
 </Playground>
 
